# llm-tasks

./: AGENTS.md  README.md  lefthook.yml
2026-01-06-obs-document/: estimation.md  plan.md  pyproject.toml
2026-01-07-ableton-document/: plan.md  pyproject.toml
2026-01-07-ableton-document/docs/: bass-tone.md  workflow.md
2026-01-07-anki-document/: plan.md
2026-01-08-bass-transcription-app/: plan.md
2026-01-10-audio-plugin-dev/: README.md  plan.md
2026-01-11-music-transcription/: plan.md  pyproject.toml
2026-01-11-music-transcription/notes/: doc1.md  doc2.md  doc3.md  fret-positioning-prompt.md  fret-positioning-test-1.md
2026-01-13-llm-tooling/: README.md  plan.md
2026-01-13-llm-tooling/notes/: agent-permissions.md  claude-code-skills.md  cloud-sync-alternative.md  directory-backed-chat.md  knowledge-work-patterns.md  llm-tools-api.md  opencode-compaction.md  opencode-usage.md  prd-knowledge-work-agent.md  workflow-patterns.md
2026-01-15-claude-history-viewer/: README.md  main.py  package.json  plan.md  pyproject.toml  web.py
2026-01-15-claude-history-viewer/notes/: prd.md  (+1 more)
2026-01-16-homebrew-arch/: README.md  plan.md
2026-01-17-bass-tone/: README.md  plan.md
2026-01-20-streaming-migration/: README.md  plan.md
2026-01-24-linux-setup/: README.md  plan.md
drafts/: dev-notes-convention.md  parallel-agents-worktree.md
tasks/2026-01-11-music-transcription/: .gitignore  README.md  plan.md  pyproject.toml
tasks/2026-01-11-music-transcription/notes/: chat1.txt  doc1.md  doc2.md  doc3.md  fret-positioning-prompt.md  fret-positioning-test-1.md
(+40 files in other folders)
